# mini-crm

./: .gitignore  README.md  pyproject.toml
src/mini_crm/: db.py  main.py  settings.py
src/mini_crm/api/v1/: contacts.py  leads.py  operators.py  sources.py
src/mini_crm/dependencies/: services.py
src/mini_crm/models/: __init__.py  contacts.py  leads.py  operators.py  sources.py  sources_operators.py
src/mini_crm/repos/: __init__.py  contact.py  lead.py  operator.py  source.py  source_operator.py
src/mini_crm/schemas/: __init__.py  contacts.py  leads.py  operators.py  sources.py  sources_operators.py
src/mini_crm/services/: __init__.py  contact.py  lead.py  operator.py  source.py  source_operator.py
